<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/physID"
        android:layout_width="100dp"
    android:layout_height="100dp"
    android:layout_x="110dp"
    android:layout_y="20dp"
    android:src="@drawable/physics" />

    <!-- Welcome Text -->
    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_nmc"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_x="120dp"
        android:layout_y="140dp" />

    <!-- First Name -->
    <TextView
        android:id="@+id/firstNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:textSize="18sp"
        android:layout_x="120dp"
        android:layout_y="180dp" />

    <!-- Last Name -->
    <TextView
        android:id="@+id/lastNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:textSize="18sp"
        android:layout_x="120dp"
        android:layout_y="220dp" />

    <!-- Stream -->
    <TextView
        android:id="@+id/streamText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stream"
        android:textSize="18sp"
        android:layout_x="120dp"
        android:layout_y="260dp" />

    <!-- Phone -->
    <TextView
        android:id="@+id/phoneText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textSize="18sp"
        android:layout_x="120dp"
        android:layout_y="300dp" />

    <!-- Bio -->
    <TextView
        android:id="@+id/bioText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bio"
        android:textSize="18sp"
        android:layout_x="120dp"
        android:layout_y="340dp" />

</AbsoluteLayout>
