<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RelativeLayout">

    <ImageView
        android:id="@+id/sparkID"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/sparkling" />

    <!-- Welcome Text -->
    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_nmc"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_below="@id/sparkID"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal" />

    <!-- First Name -->
    <TextView
        android:id="@+id/firstNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:textSize="18sp"
        android:layout_below="@id/welcomeText"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true" />

    <!-- Last Name -->
    <TextView
        android:id="@+id/lastNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:textSize="18sp"
        android:layout_below="@id/firstNameText"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true" />

    <!-- Stream -->
    <TextView
        android:id="@+id/streamText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stream"
        android:textSize="18sp"
        android:layout_below="@id/lastNameText"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true" />

    <!-- Phone -->
    <TextView
        android:id="@+id/phoneText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textSize="18sp"
        android:layout_below="@id/streamText"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true" />

    <!-- Bio -->
    <TextView
        android:id="@+id/bioText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bio"
        android:textSize="18sp"
        android:layout_below="@id/phoneText"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
